# RCGWorkshops

./: CMakeLists.txt  README.md
basic_raytracer/: CMakeLists.txt  README.md
basic_raytracer/models/bedroom/: bed_room.mtl
basic_raytracer/src/: CMakeLists.txt  GLDrawer.cpp  GLDrawer.hpp  camera.cpp  camera.hpp  common.hpp  logger.cpp  logger.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  objects.cpp  objects.hpp  scene.cpp  scene.hpp  sceneDrawer.cpp  sceneDrawer.hpp  transform.hpp
